--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "salesforce-app",
+  "name": "salesforce-integration",
   "private": true,
   "version": "1.0.0",
-  "description": "Salesforce App",
+  "description": "This is the integration between Zentitle and Salesforce.",
   "scripts": {
     "lint": "eslint **/{aura,lwc}/**/*.js",
     "test": "npm run test:unit",
